index page commit

--- a/app/sass/_base/_btn.sass
+++ b/app/sass/_base/_btn.sass
@@ -18,9 +18,9 @@
 
 	&:hover,
 	&:focus
-		color: $text
+		color: $text !important
 		background-color: $accent
 		border: 1px solid $accent
 
 	img
-		margin-right: 20px
+		margin-right: 15px
