--- a/app/sass/_base/_hamburger.sass
+++ b/app/sass/_base/_hamburger.sass
@@ -1,24 +1,28 @@
 .hamburger
 	display: none
 	position: absolute
-	right: 15px
-	top: 55%
+	left: 15px
+	top: 50%
 	padding: 0
 	transform: translate(0, -50%)
 	border: none
 	background-color: transparent
-	transition: all .3s
-
+	transition: all .6s
+	width: 35px
+	height: 25px
+	z-index: 101
+	perspective: 80px
+	
 	&:focus,
 	&:hover
 		outline: none
-		opacity: .7
 
-	&__box
-		position: relative
-		display: inline-block
-		width: 35px
-		perspective: 80px
+	// &__box
+	// 	position: relative
+	// 	display: inline-block
+	// 	width: 40px
+	// 	height: 40px
+	// 	perspective: 80px
 
 	&__item
 		position: absolute
@@ -26,7 +30,7 @@
 		top: 0
 		width: 35px
 		height: 3px
-		background-color: #000
+		background-color: #fff
 		border-radius: 4px
 		transition: all .2s
 		bottom: 0
@@ -36,8 +40,8 @@
 			display: block
 			position: absolute
 			right: 0
-			top: -10px
-			background-color: #000
+			top: 10px
+			background-color: #fff
 			width: 35px
 			height: 3px
 			transition: transform 0s 0.1s
@@ -47,8 +51,8 @@
 			display: block
 			position: absolute
 			right: 0
-			top: -20px
-			background-color: #000
+			top: 20px
+			background-color: #fff
 			width: 35px
 			height: 3px
 			transition: transform 0s 0.1s
@@ -60,8 +64,8 @@
 			background-color: transparent
 			transform: rotateY(180deg)
 			&::before
-				transform: translate3d(0, 0px, 0) rotate(45deg)
+				transform: translate3d(0, 5px, 0) rotate(45deg)
 			&::after
-				transform: translate3d(0, 10px, 0) rotate(-45deg)
+				transform: translate3d(0, -5px, 0) rotate(-45deg)
 
 
