exercises + trainers page commit

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -37,10 +37,12 @@
 	&__logo
 		display: flex
 		justify-content: center
+		z-index: 102
 
 	&__btn
 		display: flex
 		justify-content: flex-end
+		z-index: 102
 
 
 .nav
@@ -211,6 +213,6 @@
 
 
 
-
-@import "page"
+@import "_page/trainers"
+@import "_page/exercises"
 @import "media" // Always at the end
