--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -23,6 +23,11 @@ body
 	color: $text
 	line-height: 1.4
 	font-weight: 400
+	display: flex
+	flex-direction: column
+	justify-content: space-between
+	background-color: #242424
+	min-height: 100vh
 
 ::selection
 	background-color: $accent
@@ -39,6 +44,11 @@ h1, h2, h3, h4, h5, h6
 	padding: 0
 	font-weight: 400
 	font-family: $title
+
+h2
+	font-size: 24px
+	margin-bottom: 70px
+	text-transform: uppercase
 
 ul
 	margin: 0
@@ -58,6 +68,7 @@ input, textarea
 	-webkit-appearance: none
 	width: 100%
 	height: 50px
+	font-family: $title
 	
 	&:focus:required:invalid
 		border-color: red
