--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -46,9 +46,42 @@ h1, h2, h3, h4, h5, h6
 	font-family: $title
 
 h2
+	display: flex
+	flex-wrap: wrap
 	font-size: 24px
 	margin-bottom: 70px
 	text-transform: uppercase
+
+	a
+		color: $text
+
+		&:hover,
+		&:focus
+			color: $accent
+
+	span
+		position: relative
+		display: block
+		width: 22px
+		height: 22px
+		border: 2px solid #fff
+		border-radius: 50%
+		transition: all .6s
+		margin: 0 15px
+
+		&::before
+			content: ''
+			position: absolute
+			left: 50%
+			top: 50%
+			transform: translate(-70%, -50%) rotate(135deg)
+			width: 8px
+			height: 8px
+			border-top: 1.3px solid #fff
+			border-left: 1.3px solid #fff
+			transition: all .6s
+
+		
 
 ul
 	margin: 0
@@ -116,7 +149,7 @@ button:focus,
 button:hover,
 	outline: none
 	text-decoration: none
-	transition: all .6s
+	transition: all .3s
 
 
 
