--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -30,6 +30,17 @@
 	h2
 		margin-bottom: 50px
 
+	.block
+		padding-right: 40px
+
+		img
+			margin-right: 30px
+			margin-bottom: 30px
+
+		&__header
+			span
+				right: -20px
+
 	.exercises
 		&__btn
 			a
@@ -153,6 +164,29 @@
 
 
 @media only screen and (max-width : 767px)
+	.block
+		padding: 15px 20px
+
+		img
+			max-width: 100%
+			width: 100%
+			margin-right: 0
+			margin-bottom: 20px
+
+		&__header
+			font-size: 16px
+
+			span
+				right: 0
+
+		&__content
+			flex-wrap: wrap
+			padding-top: 20px
+			font-size: 14px
+
+			p, ol, ul
+				margin-bottom: 15px
+
 	.exercises
 		&__item
 			width: 48%
@@ -166,8 +200,11 @@
 			input
 				width: 70%
 
+	.exercises,
 	.trainers
 		padding: 40px 0
+	
+	.trainers
 		&__item_name
 			padding: 11px
 
@@ -191,6 +228,9 @@
 @media only screen and (max-width : 576px)
 	h2
 		margin-bottom: 20px
+
+		span
+			margin: 0 10px
 
 	.header__logo img
 		width: 215px
@@ -241,8 +281,11 @@
 	.exercises__item
 		width: 100%
 
+	.exercises,
 	.trainers
 		padding: 30px 0
+
+	.trainers
 
 		h2
 			margin-bottom: 20px
