--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -81,6 +81,7 @@
 	
 	&::after
 		content: 'Workout'
+		white-space: nowrap
 		position: absolute
 		left: 65%
 		top: 30%
@@ -218,4 +219,5 @@
 
 @import "_page/trainers"
 @import "_page/exercises"
+@import "_page/login"
 @import "media" // Always at the end
