--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -94,15 +94,20 @@ i
 	color: #fff
 
 input, textarea
-	border: #000 1px solid
+	border: transparent 1px solid
 	border-radius: 0
 	outline: none
 	box-shadow: none
 	-webkit-appearance: none
 	width: 100%
 	height: 50px
+	background-color: #313131
+	padding: 0 40px
 	font-family: $title
-	
+	color: $text
+	transition: all .6s
+	font-size: 16px
+
 	&:focus:required:invalid
 		border-color: red
 		outline: none
@@ -116,8 +121,11 @@ input, textarea
 		-webkit-appearance: none
 
 	&::placeholder
-		color: #000
+		color: rgba(#fff, .15)
 
+	&:hover,
+	&:focus
+		border-color: rgba(#fff, 15)
 input
 	height: 50px
 	line-height: 50px
