admin1 + admin3 page commit

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -220,4 +220,5 @@
 @import "_page/trainers"
 @import "_page/exercises"
 @import "_page/login"
+@import "_page/admin"
 @import "media" // Always at the end
