--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -27,6 +27,14 @@
 
 
 @media only screen and (max-width : 1200px)
+	.admin--download__left
+		max-width: 100%
+		width: 30%
+
+		&_img
+			width: 100%
+			height: 290px
+
 	h2
 		margin-bottom: 50px
 
@@ -86,6 +94,32 @@
 
 
 @media only screen and (max-width : 992px)
+	.admin--download
+
+		&__right
+			p, label
+				font-size: 14px
+
+			&_title
+				width: 30%
+
+			&_radio label
+				margin-bottom: 15px
+
+			&_line
+				margin-bottom: 20px
+
+		.block
+			margin-bottom: 20px
+			padding: 15px 30px 15px 15px
+
+			&__header
+				font-size: 18px
+
+				span
+					right: -19px
+					top: -4px
+
 	h2
 		margin-bottom: 30px
 
@@ -167,6 +201,19 @@
 
 
 @media only screen and (max-width : 767px)
+	.admin--download
+		&__left
+			width: 35%
+			&_img
+				height: 190px
+
+			.btn
+				padding: 0 15px
+
+		&__right
+			width: 62%
+
+
 	.block
 		padding: 15px 20px
 
@@ -200,6 +247,9 @@
 				margin-bottom: 15px
 				padding: 0 15px
 
+				&:last-child
+					margin-bottom: 0
+
 			input
 				width: 70%
 
@@ -229,6 +279,26 @@
 
 
 @media only screen and (max-width : 576px)
+	.admin--download
+		&__left
+			width: 100%
+
+			&_img
+				margin-bottom: 15px
+
+			.btn
+				margin-bottom: 15px
+
+				&:last-child
+					margin-bottom: 15px
+
+		&__right
+			width: 100%
+
+			&_title
+				margin-right: 5px
+
+
 	h2
 		margin-bottom: 20px
 
