admin2 page commit

--- a/app/sass/_page/_admin.sass
+++ b/app/sass/_page/_admin.sass
@@ -138,5 +138,49 @@
 			&__content
 				padding-top: 20px
 
+	
+	&--list
+		display: flex
+		justify-content: space-around
+		flex-wrap: wrap
+
+		&__item
+			width: 23.5%
+			margin-bottom: 80px
+			transition: all .6s
+
+			&:hover
+				margin-top: -30px
+
+			img
+				margin-bottom: 20px
+				width: 100%
+
+			p
+				padding: 15px
+				background-color: #343434
+				border-radius: 50px
+				margin-bottom: 15px
+				text-align: center
+				font-size: 18px
+				line-height: 1
+				font-family: $title
+
+			&_btn
+				display: flex
+				flex-wrap: wrap
+				justify-content: space-between
+				align-items: center
+
+				img
+					width: 13px
+					margin-bottom: 0
+					margin-top: -5px
+
+				.btn
+					padding: 0 25px
+
+
+
 
 
