--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -24,16 +24,33 @@
 
 		.btn
 			padding: 0 35px
+	
+	.admin--list__item_btn .btn
+		padding: 0 15px
+
+		img
+			margin-right: 5px
 
 
 @media only screen and (max-width : 1200px)
-	.admin--download__left
-		max-width: 100%
-		width: 30%
+	.admin
+		&--download__left
+			max-width: 100%
+			width: 30%
 
-		&_img
-			width: 100%
-			height: 290px
+			&_img
+				width: 100%
+				height: 290px
+
+		&--list__item
+			margin-bottom: 40px
+
+			&_btn .btn
+				width: 100%
+				margin-bottom: 15px
+
+				&:last-child
+					margin-bottom: 0
 
 	h2
 		margin-bottom: 50px
@@ -94,31 +111,35 @@
 
 
 @media only screen and (max-width : 992px)
-	.admin--download
+	.admin
+		&--download
 
-		&__right
-			p, label
-				font-size: 14px
+			&__right
+				p, label
+					font-size: 14px
 
-			&_title
-				width: 30%
+				&_title
+					width: 30%
 
-			&_radio label
-				margin-bottom: 15px
+				&_radio label
+					margin-bottom: 15px
 
-			&_line
+				&_line
+					margin-bottom: 20px
+
+			.block
 				margin-bottom: 20px
+				padding: 15px 30px 15px 15px
 
-		.block
-			margin-bottom: 20px
-			padding: 15px 30px 15px 15px
+				&__header
+					font-size: 18px
 
-			&__header
-				font-size: 18px
+					span
+						right: -19px
+						top: -4px
 
-				span
-					right: -19px
-					top: -4px
+		&--list__item
+			width: 32%
 
 	h2
 		margin-bottom: 30px
@@ -201,17 +222,21 @@
 
 
 @media only screen and (max-width : 767px)
-	.admin--download
-		&__left
-			width: 35%
-			&_img
-				height: 190px
+	.admin
+		&--download
+			&__left
+				width: 35%
+				&_img
+					height: 190px
 
-			.btn
-				padding: 0 15px
+				.btn
+					padding: 0 15px
 
-		&__right
-			width: 62%
+			&__right
+				width: 62%
+
+		&--list__item
+			width: 48%
 
 
 	.block
@@ -279,24 +304,29 @@
 
 
 @media only screen and (max-width : 576px)
-	.admin--download
-		&__left
-			width: 100%
+	.admin
+		&--download
+			&__left
+				width: 100%
 
-			&_img
-				margin-bottom: 15px
-
-			.btn
-				margin-bottom: 15px
-
-				&:last-child
+				&_img
 					margin-bottom: 15px
 
-		&__right
-			width: 100%
+				.btn
+					margin-bottom: 15px
 
-			&_title
-				margin-right: 5px
+					&:last-child
+						margin-bottom: 15px
+
+			&__right
+				width: 100%
+
+				&_title
+					margin-right: 5px
+
+		&--list__item
+			p
+				font-size: 16px
 
 
 	h2
@@ -355,6 +385,12 @@
 
 
 @media only screen and (max-width : 480px)
+	.admin--list__item
+		width: 100%
+
+		&:last-child
+			margin-bottom: 0
+
 	.login
 
 		&__container
