--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -33,6 +33,18 @@
 
 
 @media only screen and (max-width : 1200px)
+	.profile--my__right
+		width: 72%
+
+		h2
+			margin-bottom: 30px
+
+		li
+			margin-bottom: 20px
+
+		p
+			margin-bottom: 20px
+
 	.admin
 		&--download__left
 			max-width: 100%
@@ -111,6 +123,16 @@
 
 
 @media only screen and (max-width : 992px)
+	.profile--my__right_col
+		width: 48%
+
+		li,
+		span
+			font-size: 14px
+
+		.btn
+			padding: 0 13px
+
 	.admin
 		&--table
 			margin-bottom: 30px
@@ -228,6 +250,18 @@
 
 
 @media only screen and (max-width : 767px)
+	.profile--my__right
+
+		h2, li, p
+			margin-bottom: 15px
+
+		&_col
+			width: 100%
+			margin-bottom: 20px
+
+			&:last-child
+				margin-bottom: 0
+
 	.admin
 		&--download
 			&__left
@@ -398,6 +432,19 @@
 
 
 @media only screen and (max-width : 480px)
+	.profile--my
+		&__left,
+		&__right
+			width: 100%
+
+		&__left
+			margin-bottom: 20px
+
+		&__right
+			margin-bottom: 0
+
+
+
 	.admin
 		&--table td
 			padding: 5px
