--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -214,11 +214,28 @@
 		&:last-child
 			margin-bottom: 0
 
+.title
+	display: flex
+	justify-content: space-between
+	flex-wrap: wrap
+	align-items: center
+	margin-bottom: 40px
 
+	h2
+		margin-bottom: 10px
+
+	a
+		margin-right: 30px
+		margin-bottom: 10px
+
+		&:last-child
+			margin-right: 0
+			margin-bottom: 0
 
 
 @import "_page/trainers"
 @import "_page/exercises"
 @import "_page/login"
 @import "_page/admin"
+@import "_page/profile"
 @import "media" // Always at the end
