--- a/app/sass/_page/_profile.sass
+++ b/app/sass/_page/_profile.sass
@@ -8,9 +8,25 @@
 		&__left
 			width: 24%
 
+			&_img
+				position: relative
+				width: 100%
+				border-radius: 25px
+
+				span
+					position: absolute
+					top: 25px
+					right: 25px
+					background-color: #00a651
+					border-radius: 25px
+					padding: 3px 10px
+					font-weight: 700
+					font-size: 16px
+
 			img
 				width: 100%
 				border-radius: 25px
+
 
 		&__right
 			width: 68%
@@ -38,6 +54,19 @@
 				&:last-child
 					margin-bottom: 0
 
+			.btn
+				width: 100%
+				margin-bottom: 25px
+
+				&:last-child
+					margin-bottom: 0
+
 
 			&_col
 				width: 45%
+
+
+
+
+
+
