--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -224,13 +224,44 @@
 	h2
 		margin-bottom: 10px
 
-	a
+	.btn
 		margin-right: 30px
 		margin-bottom: 10px
 
 		&:last-child
 			margin-right: 0
 			margin-bottom: 0
+	
+	&__link
+		display: flex
+		color: $text
+		margin-bottom: 10px	
+
+		&:hover,
+		&:focus
+			color: $accent
+
+		span
+			position: relative
+			display: block
+			width: 22px
+			height: 22px
+			border: 2px solid #fff
+			border-radius: 50%
+			transition: all .6s
+			margin: 0 15px 0 0
+
+			&::before
+				content: ''
+				position: absolute
+				left: 50%
+				top: 50%
+				transform: translate(-70%, -50%) rotate(135deg)
+				width: 8px
+				height: 8px
+				border-top: 1.3px solid #fff
+				border-left: 1.3px solid #fff
+				transition: all .6s
 
 
 @import "_page/trainers"
