profile-<div class=title> page commit

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -124,6 +124,9 @@
 
 @media only screen and (max-width : 992px)
 	.profile
+		&--program__priz
+			padding: 5px
+			
 		&--my
 			&__left
 				&_img
