--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -235,7 +235,8 @@
 	&__link
 		display: flex
 		color: $text
-		margin-bottom: 10px	
+		margin-bottom: 10px
+		font-size: 16px
 
 		&:hover,
 		&:focus
@@ -256,12 +257,18 @@
 				position: absolute
 				left: 50%
 				top: 50%
-				transform: translate(-70%, -50%) rotate(135deg)
+				transform: translate(-30%, -50%) rotate(-45deg)
 				width: 8px
 				height: 8px
 				border-top: 1.3px solid #fff
 				border-left: 1.3px solid #fff
 				transition: all .6s
+
+
+
+
+
+
 
 
 @import "_page/trainers"
