--- a/app/sass/_page/_profile.sass
+++ b/app/sass/_page/_profile.sass
@@ -94,7 +94,6 @@
 			&_col
 				width: 45%
 
-
 	&--edit
 		li
 			align-items: center
@@ -129,5 +128,47 @@
 			width: 100%
 			margin-top: 15px
 
+	&--program
+		&__header
+			padding-left: 0
 
+		&__name
+			font-size: 16px
 
+		&__priz
+			top: 10px
+			right: 10px
+			color: $text
+			display: flex
+			align-items: center
+
+			&:hover,
+			&:focus
+				color: $accent
+
+				span
+					border-color: $accent
+					&::before
+						border-color: $accent
+
+			span
+				position: relative
+				display: block
+				width: 22px
+				height: 22px
+				border: 2px solid #fff
+				border-radius: 50%
+				transition: all .6s
+				margin-left: 10px
+
+				&::before
+					content: ''
+					position: absolute
+					left: 50%
+					top: 50%
+					transform: translate(-70%, -50%) rotate(135deg)
+					width: 8px
+					height: 8px
+					border-top: 1.3px solid #fff
+					border-left: 1.3px solid #fff
+					transition: all .6s
