--- a/app/sass/_page/_profile.sass
+++ b/app/sass/_page/_profile.sass
@@ -11,7 +11,7 @@
 			&_img
 				position: relative
 				width: 100%
-				border-radius: 25px
+				border-radius: 30px
 
 				span
 					position: absolute
@@ -54,7 +54,7 @@
 
 			img
 				width: 100%
-				border-radius: 25px
+				border-radius: 30px
 
 
 		&__right
@@ -62,6 +62,7 @@
 			display: flex
 			justify-content: space-between
 			flex-wrap: wrap
+
 
 			h2
 				margin-bottom: 75px
@@ -94,6 +95,21 @@
 			&_col
 				width: 45%
 
+			&_list
+				margin-bottom: 30px
+				
+				li
+					font-size: 14px
+					margin-bottom: 3px
+					justify-content: flex-start
+
+					&::before
+						content: '▶'
+						float: left
+						top: 8px
+						padding-top: 2px
+						padding-right: 3px
+						font-size: 7px
 	&--edit
 		li
 			align-items: center
@@ -172,3 +188,13 @@
 					border-top: 1.3px solid #fff
 					border-left: 1.3px solid #fff
 					transition: all .6s
+
+
+
+
+
+
+
+
+
+
