profile-trainer2 page commit

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -214,6 +214,7 @@
 		&:last-child
 			margin-bottom: 0
 
+
 .title
 	display: flex
 	justify-content: space-between
@@ -263,11 +264,27 @@
 				border-top: 1.3px solid #fff
 				border-left: 1.3px solid #fff
 				transition: all .6s
+	
+	&--name
+		justify-content: flex-start
+		margin-bottom: 15px
+		width: 100%
 
+		h2
+			width: auto !important
+			margin-right: 70px !important
+			margin-bottom: 0 !important
 
+		p
+			padding: 3px 10px
+			background-color: $accent
+			border-radius: 20px
 
+			span
+				color: $text
 
-
+			img
+				margin-right: 7px
 
 
 
