profile-trainer-edit page commit

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -274,17 +274,22 @@
 
 
 @media only screen and (max-width : 767px)
-	.profile--my__right
+	.profile
+		&--trainer
+			&__textarea
+				margin-bottom: 15px
 
-		h2, li, p
-			margin-bottom: 15px
+		&--my__right
 
-		&_col
-			width: 100%
-			margin-bottom: 20px
+			h2, li, p
+				margin-bottom: 15px
 
-			&:last-child
-				margin-bottom: 0
+			&_col
+				width: 100%
+				margin-bottom: 20px
+
+				&:last-child
+					margin-bottom: 0
 
 	.admin
 		&--download
