--- a/app/sass/_page/_profile.sass
+++ b/app/sass/_page/_profile.sass
@@ -191,7 +191,17 @@
 					border-top: 1.3px solid #fff
 					border-left: 1.3px solid #fff
 					transition: all .6s
+	
 
+	&--trainer
+
+		&__textarea
+			height: 160px
+			margin-bottom: 40px
+
+			textarea
+				min-height: 100%
+				height: 100%
 
 
 
