--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -293,4 +293,5 @@
 @import "_page/login"
 @import "_page/admin"
 @import "_page/profile"
+@import "_page/konstruktor"
 @import "media" // Always at the end
