--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -128,11 +128,11 @@ input
 	height: 50px
 	line-height: 50px
 
-	&::placeholder
-	&::-webkit-input-placeholder /* Chrome/Opera/Safari */
-	&::-moz-placeholder /* Firefox 19+ */
-	&:-ms-input-placeholder /* IE 10+ */
-	&:-moz-placeholder /* Firefox 18- */
+	&::placeholder,
+	&::-webkit-input-placeholder, /* Chrome/Opera/Safari */
+	&::-moz-placeholder, /* Firefox 19+ */
+	&:-ms-input-placeholder, /* IE 10+ */
+	&:-moz-placeholder, /* Firefox 18- */
 		line-height: 50px
 
 input[type="number"]
