--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -33,8 +33,45 @@
 
 
 @media only screen and (max-width : 1200px)
-	.konstruktor__title
-		margin-bottom: 40px
+	.konstruktor
+		&--step
+			&__form
+				padding: 30px
+
+				&_left
+					width: 28%
+
+				&_right
+					width: 70%
+
+					p
+						margin-bottom: 15px
+
+					label
+						font-size: 14px
+
+				&_btn
+					margin-top: 15px
+
+			&__comment
+
+				&_item
+					padding: 30px
+
+					p
+						margin-bottom: 15px
+						font-size: 14px
+
+					span
+						width: 68%
+						&:first-child
+							width: 30%
+
+				&_img
+					margin-right: 30px
+
+		&__title
+			margin-bottom: 40px
 
 	.profile--my__right
 		width: 72%
@@ -126,8 +163,22 @@
 
 
 @media only screen and (max-width : 992px)
-	.konstruktor__program b
-		margin-right: 40px
+	.konstruktor
+		&--step
+			&__form
+				&_header
+					margin-bottom: 20px
+
+				&_img
+					width: 180px
+					height: 180px
+
+				&_left
+					.btn
+						font-size: 14px
+
+		&__program b
+			margin-right: 40px
 
 	.profile
 		&--program__priz
@@ -280,25 +331,73 @@
 
 
 @media only screen and (max-width : 767px)
-	.konstruktor__program
-		p
-			font-size: 14px
-			margin-bottom: 40px
-
-		span
-			width: 35%
-
-		b
-			margin-right: 25px
-
-		input
-			width: 80px
-			padding: 0 5px
-
-		label
-			font-size: 14px
-
 	.konstruktor
+		&__title--left
+			justify-content: space-between
+
+		&--step
+			&__title
+				h3
+					margin-right: 15px
+
+				p
+					font-size: 14px
+
+				select
+					padding: 0 30px
+
+			&__comment
+				&_item
+					padding: 20px
+					flex-wrap: wrap
+					margin-bottom: 20px
+
+				&_img
+					width: 100%
+					text-align: center
+					margin-bottom: 15px
+					margin-right: 0
+
+
+			&__form
+				padding: 20px
+
+				&_left,
+				&_right
+					width: 100%
+				&_left
+					margin-bottom: 20px
+					text-align: center
+
+				&_img
+					margin-bottom: 15px
+					width: 100%
+
+				h3
+					margin-right: 15px
+				&_header
+					.btn
+						margin-right: 15px
+						font-size: 14px
+
+		&__program
+			p
+				font-size: 14px
+				margin-bottom: 40px
+
+			span
+				width: 35%
+
+			b
+				margin-right: 25px
+
+			input
+				width: 80px
+				padding: 0 5px
+
+			label
+				font-size: 14px
+
 		&__title
 			margin-bottom: 30px
 
@@ -411,6 +510,21 @@
 
 
 @media only screen and (max-width : 576px)
+	.konstruktor--step
+		&__comment_option a
+			padding: 10px
+
+		&__form_header
+			flex-direction: column
+
+			h3
+				margin-right: 0
+				margin-bottom: 10px
+
+			.btn
+				margin-right: 0
+				margin-bottom: 10px
+
 	.profile--my__left_img .btn
 		font-size: 14px
 		width: 160px
@@ -505,6 +619,55 @@
 @media only screen and (max-width : 480px)
 
 	.konstruktor
+		&__title--left
+			justify-content: center
+
+			div
+				margin-right: 0
+
+		&--step
+			&__comment
+				&_option
+					a
+						margin-right: 5px
+
+				&_item
+					padding: 10px
+					
+					p
+						flex-wrap: wrap
+
+					span
+						width: 100%
+						&:first-child
+							width: 100%
+
+			&__form
+				padding: 10px
+				&_right
+					p
+						flex-wrap: wrap
+
+					label,
+					input,
+					textarea
+						width: 100%
+
+			&__title
+				flex-wrap: wrap
+				flex-direction: column
+				margin-bottom: 20px
+
+				h3
+					margin-bottom: 10px
+					margin-right: 0
+				p
+					margin-right: 0
+
+				select
+					height: 30px
+					font-size: 14px
+
 		&__program
 			p
 				text-align: center
