profile-massang page commit

--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,2 +1,19 @@
 @import "../libs/bootstrap/bootstrap-reboot.min.css"
-// @import "../libs/animation/animate.min"
+@import "../libs/jscrollpane/jquery.jscrollpane.css"
+
+
+.jspDrag
+	background-color: #242424
+	width: 5px
+	border-radius: 5px
+
+.jspVerticalBar
+	width: 5px
+
+.jspTrack
+	background: #000
+
+.jspHorizontalBar
+	display: none
+
+	
