--- a/app/sass/_base/_animation.sass
+++ b/app/sass/_base/_animation.sass
@@ -12,3 +12,31 @@
 		transform: scale(1.2)
 	100%
 		transform: scale(1)
+
+
+//----------------text---------------
+@keyframes after
+	0%
+		content: 'Workout'
+		opacity: .3
+	10%
+		content: 'Workout'
+		opacity: 1
+	29%
+		content: 'Workout'
+		opacity: 0
+	30%
+		content: 'Lorem'
+		opacity: 0
+	60%
+		content: 'Lorem'
+		opacity: 1
+	90%
+		content: 'Lorem'
+		opacity: 0
+	91%
+		content: 'Workout'
+		opacity: 0
+	100%
+		content: 'Workout'
+		opacity: 0.3
