--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,5 +1,6 @@
 @import "../libs/bootstrap/bootstrap-reboot.min.css"
 @import "../libs/jscrollpane/jquery.jscrollpane.css"
+// @import "../libs/textillate/animate.css"
 
 
 .jspDrag
