--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -83,15 +83,16 @@
 		content: 'Workout'
 		white-space: nowrap
 		position: absolute
-		left: 65%
-		top: 30%
+		left: 60%
+		top: 35%
 		transform: translate(-50%, -50%)
 		font-family: $decor
 		color: #3b3d3d
-		font-size: 485px
+		font-size: 450px
 		line-height: 1
 		font-weight: 600
 		z-index: 0
+		animation: after 15s linear infinite
 
 
 	&__before
