--- a/app/sass/_page/_trainers.sass
+++ b/app/sass/_page/_trainers.sass
@@ -61,7 +61,7 @@
 			line-height: 1
 
 		&_header
-			padding-left: 15px
+			// padding-left: 15px
 			display: flex
 			justify-content: space-between
 			align-items: center
