--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -19,7 +19,6 @@
 	background: #010101
 	z-index: 1
 
-
 	&--active, &--menu
 
 	&__container
@@ -43,6 +42,22 @@
 		display: flex
 		justify-content: flex-end
 		z-index: 102
+
+	&__login
+		font-family: $title
+		color: $text
+		font-size: 18px
+
+		&:hover,
+		&:focus
+			color: $accent
+
+		img
+			border-radius: 50%
+			width: 35px
+			height: 35px
+			margin-right: 25px
+
 
 
 .nav
