--- a/app/sass/_base/_modal.sass
+++ b/app/sass/_base/_modal.sass
@@ -1,16 +1,73 @@
 .modal
 	position: relative
-	overflow: hidden
-	max-width: 320px
+	max-width: 570px
 	height: auto
-	padding: 50px
-	background-color: #fff
-	z-index: 1
+	width: 100%
+	background-color: $bg
+	border-radius: 30px
+	box-shadow: 0 0 25px 2px rgba(#0c0c0c, 1)
+	border-top: 1px solid rgba($text, .2)
+	z-index: 2
 
-	.btn
+	h3
+		position: relative
 		width: 100%
-		padding: 18px 0
-		font-size: 12px
+		padding-bottom: 30px
+		text-align: center
+		font-size: 24px
+		font-family: $title
+		color: $accent
+		text-transform: uppercase
+		font-weight: 700
+
+		&::before
+			content: ''
+			position: absolute
+			bottom: -2.5px
+			right: 0
+			left: 0
+			height: 5px
+			width: 100%
+			border-radius: 5px
+			background-color: $accent
+			box-shadow: 0 0 15px 2px rgba($accent, 1)
+
+	textarea
+		min-height: 160px
+
+	&--program
+		max-width: 1410px
+		background-color: #242424
+		padding: 60px 60px 0 60px
+
+		&__btn
+			display: flex
+			flex-wrap: wrap
+			align-items: center
+			margin-bottom: 70px
+			
+			p
+				font-family: $title
+				font-size: 18px
+				color: #777b7b
+				margin-right: 20px
+				line-height: 1
+
+			a
+				margin-bottom: 10px
+				margin-right: 10px
+				padding: 0 15px
+				font-weight: 400
+
+				&:last-child
+					margin-right: 0
+	
+	&--gif
+		max-width: 992px
+
+		img
+			width: 100%
+			height: auto
 
 
 .close
@@ -21,7 +78,7 @@
 	box-shadow: 0 0 8px rgba(0, 0, 0, 0.33)
 	width: 48px
 	height: 48px
-	background-color: #c4c4c4
+	background-color: $accent
 	border-radius: 50%
 	border: none
 	cursor: pointer
@@ -31,13 +88,12 @@
 		outline: none
 		transform: rotate(90deg)
 
-
 	span
 		display: block
 		position: absolute
 		left: 50%
 		top: 50%
-		background: #fff
+		background: $text
 		transition: all .6s
 		border-radius: 4px
 		height: 22px
@@ -45,7 +101,6 @@
 
 		&:first-child
 			transform: translate(-50%, -50%) rotate(45deg)
-
 
 		&:last-child
 			transform: translate(-50%, -50%) rotate(-45deg)
