--- a/app/sass/_page/_login.sass
+++ b/app/sass/_page/_login.sass
@@ -156,10 +156,14 @@
 			input
 				display: none
 
+			label
+				padding: 0 30px
+				width: 48%
+
 			input[type="radio"]:checked + label
 				background-color: $accent
 				border-color: $accent
-
+				
 			input[type="checkbox"] + label::after
 				background-color: transparent
 
