--- a/app/sass/_page/_profile.sass
+++ b/app/sass/_page/_profile.sass
@@ -148,15 +148,16 @@
 
 	
 	&--program
+
 		&__header
 			padding-left: 0
-
+	
 		&__name
 			font-size: 16px
 
 		&__priz
-			top: 10px
-			right: 10px
+			top: 5px
+			right: 5px
 			color: $text
 			display: flex
 			align-items: center
@@ -191,6 +192,9 @@
 					border-top: 1.3px solid #fff
 					border-left: 1.3px solid #fff
 					transition: all .6s
+
+		&__footer
+			padding-right: 100px
 	
 
 	&--trainer
