--- a/app/sass/_page/_exercises.sass
+++ b/app/sass/_page/_exercises.sass
@@ -41,20 +41,9 @@
 				background-color: rgba(#fff, .6)
 				color: #010101
 
-			.exercises__item_arrow
-				background-color: rgba(#fff, .6)
-
-				span
-					border-color: #010101
-					&::before
-						border-color: #010101
-
 			.exercises__item_link
-				right: 7px
 
 				p
-					margin-right: 5px
-					padding: 22px 10px
 					font-weight: 700
 
 		img
@@ -65,8 +54,8 @@
 		&_link
 			position: absolute
 			bottom: 7px
-			right: -65px
-			padding-left: 7px
+			left: 50%
+			transform: translate(-50%, 0)
 			z-index: 1
 			text-transform: uppercase
 			color: $text
@@ -75,6 +64,9 @@
 			transition: all .6s
 			display: flex
 			align-items: center
+			justify-content: center
+			text-align: center
+			width: 90%
 
 			p
 				background-color: rgba(#111, .75)
@@ -82,36 +74,6 @@
 				line-height: 1
 				border-radius: 25px
 				transition: all .6s
-				margin-right: 15px
-
-		&_arrow
-			display: block
-			padding: 22px
-			background-color: rgba(#111, .75)
-			padding: 20px
-			border-radius: 25px
-			transition: all .6s
-
-			span
-				position: relative
-				display: block
-				width: 22px
-				height: 22px
-				border: 2px solid #fff
-				border-radius: 50%
-				transition: all .6s
-
-				&::before
-					content: ''
-					position: absolute
-					left: 50%
-					top: 50%
-					transform: translate(-70%, -50%) rotate(135deg)
-					width: 9px
-					height: 9px
-					border-top: 1.3px solid #fff
-					border-left: 1.3px solid #fff
-					transition: all .6s
 
 
 .block
