pravki 2.1 animation commit

--- a/app/sass/_base/_animation.sass
+++ b/app/sass/_base/_animation.sass
@@ -17,26 +17,50 @@
 //----------------text---------------
 @keyframes after
 	0%
-		content: 'Workout'
-		opacity: .3
-	10%
-		content: 'Workout'
+		content: 'CrossFit'
 		opacity: 1
-	29%
-		content: 'Workout'
+	10%
+		content: 'CrossFit'
 		opacity: 0
+	11%
+		content: 'Cardio'
+		opacity: 0
+	20%
+		content: 'Cardio'
+		opacity: 1
 	30%
-		content: 'Lorem'
+		content: 'Cardio'
+		opacity: 0
+	31%
+		content: 'Fitness'
+		opacity: 0
+	40%
+		content: 'Fitness'
+		opacity: 1
+	50%
+		content: 'Fitness'
+		opacity: 0
+	51%
+		content: 'Workout'
 		opacity: 0
 	60%
-		content: 'Lorem'
+		content: 'Workout'
+		opacity: 1
+	70%
+		content: 'Workout'
+		opacity: 0
+	71%
+		content: 'Mobility'
+		opacity: 0
+	80%
+		content: 'Mobility'
 		opacity: 1
 	90%
-		content: 'Lorem'
+		content: 'Mobility'
 		opacity: 0
 	91%
-		content: 'Workout'
+		content: 'CrossFit'
 		opacity: 0
 	100%
-		content: 'Workout'
-		opacity: 0.3
+		content: 'CrossFit'
+		opacity: 1
