--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -722,7 +722,11 @@
 				margin-right: 0
 
 
-@media only screen and (max-width : 480px)	
+@media only screen and (max-width : 480px)
+	.login__form .btn
+		width: 70%
+		margin-right: 0
+
 	.close
 		width: 40px
 		height: 40px
