pravki 2.2 text - accardio + konstruktor3.1 commit

--- a/app/sass/_base/_modal.sass
+++ b/app/sass/_base/_modal.sass
@@ -35,6 +35,9 @@
 	textarea
 		min-height: 160px
 
+	&__header
+		border: none !important
+
 	&--program
 		max-width: 1410px
 		background-color: #242424
