pravki 2.3 nav + konstruktor3.1 commit

--- a/app/sass/_page/_konstruktor.sass
+++ b/app/sass/_page/_konstruktor.sass
@@ -219,7 +219,7 @@
 
 			&_item
 				position: relative
-				padding: 80px 90px 70px 25px
+				padding: 70px 70px 70px 25px
 				margin-bottom: 25px
 				background-color: #000
 				display: flex
@@ -228,6 +228,9 @@
 
 				&:last-child
 					margin-bottom: 0
+
+				&--two
+					padding: 25px
 
 
 				p
